# gh-actions-for-docker

./: README.md  README.md.j2  build_readme_md.py  compose.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: aws-cloudformation-lint.yml  ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  docker-build-and-push.yml  docker-build-and-save.yml  docker-build-with-multi-targets.yml  docker-buildx-bake.yml  docker-compose-build-and-push.yml  docker-image-scan.yml  docker-lint-and-scan.yml  docker-pull-from-aws.yml  docker-save-and-terraform-deploy-to-aws.yml  github-actions-lint.yml  github-codeql-analysis.yml  github-merged-branch-deletion.yml  github-open-pr-aggregate.yml  github-pr-branch-aggregation.yml  github-release.yml  github-yaml-lint.yml  json-lint.yml  json-schema-validation.yml  local-format-and-pr.yml  local-lint-and-scan.yml  microsoft-defender-for-devops.yml  pr-agent.yml  python-package-format-and-pr.yml  python-package-lint-and-scan.yml  python-package-release-on-pypi-and-github.yml  python-pyinstaller.yml  r-lint.yml  r-package-format-and-pr.yml  r-package-lint.yml  r-script-lint.yml  shell-lint.yml  terraform-deploy-to-aws.yml  terraform-docker-pull-and-deploy-to-aws.yml  terraform-docker-pull-from-aws.yml  terraform-docker-save-and-deploy-to-aws.yml  terraform-format-and-pr.yml  (+7 more)
githook/: auto-format-and-lint.sh  auto-format-and-lint.yml  github-actions-lint.sh  pre-commit.sh  python-format-and-lint.sh  terraform-format-and-lint.sh
src/: Dockerfile  build_readme_md.py  pyproject.toml
templates/: README.md.j2
