[tool.poetry]
name = "build_readme_md"
version = "v0.1.0"
description = "README.md build script"
license = "MIT"
authors = []
maintainers = []

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.4"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
bandit = "^1.7.9"
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-isort = "^6.1.1"
pep8-naming = "^0.14.1"
ruff = "^0.6.7"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8-pyproject = "^1.2.3"
types-pyyaml = "^6.0.12.20240917"
pyright = "^1.1.381"

[tool.flake8]
max-line-length = 88
exclude = ["build"]

[tool.ruff]
line-length = 88
exclude = ["build"]

[tool.isort]
line_length = 88
profile = "black"
skip = ["build"]

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true
strict = true
strict_optional = true
strict_equality = true
strict_concatenate = true
exclude = ["build"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = ["build"]
threads = 0

[tool.bandit]
recursive = true
exclude_dirs = ["build"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
